fix: Address layout on mobile

--- a/src/features/Address/address-display.module.styl
+++ b/src/features/Address/address-display.module.styl
@@ -9,6 +9,8 @@
   bold
     font-size larger
     color $gray
+  +$below(md)
+    padding-left 50px
 
 .selected
   p
