--- a/src/features/Address/address.module.styl
+++ b/src/features/Address/address.module.styl
@@ -37,6 +37,9 @@ header.view-header
   border 1px solid black
   color black
   margin-top 2em
+  +$below(md)
+    margin-top 0
+    padding 5px 10px
 
 .address-controls
   $row('between')
